[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coverlet-ai"
version = "1.0.0"
description = "CoverLet AI - Intelligent Cover Letter Generation Tool"
authors = [{name = "Hrishik Kunduru"}]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "python-docx>=0.8.11",
    "PyPDF2>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/athrishik/coverlet"
